syntax = "proto3";

option go_package = "genproto/schedule_service";

package schedule_service;



service EventService {
    rpc Create(CreateEvent) returns (Event) {}
    rpc GetByID(EventPrimaryKey) returns (Event) {}
    rpc GetList(GetListEventRequest) returns (GetListEventResponse) {}
    rpc Update(UpdateEvent) returns (Event) {}
    rpc Delete(EventPrimaryKey) returns (EventEmpty) {}
}


message EventEmpty{}

message EventPrimaryKey {
    string id = 1;
}

message CreateEvent {
    string topic = 1;
    string date = 2;
    string start_time =3;
    string branch_id = 4;
}

message Event {
    string id = 1;
    string topic = 2;
    string date = 3;
    string start_time =4;
    string branch_id = 5;
    string created_at = 6;
    string updated_at = 7;
}

message UpdateEvent {
    string id = 1;
    string topic = 2;
    string date = 3;
    string start_time =4;
    string branch_id = 5;
}

message GetListEventRequest {
    int64 offset = 1;
    int64 limit = 2;
    string search = 3;
}

message GetListEventResponse {
    int64 count = 1;
    repeated Event Events = 2;
}
