syntax = "proto3";

import "schedule.proto";
import "studentt.proto"; // Import the "student.proto" file


option go_package = "genproto/schedule_service";


package schedule_service;


service JurnalService {
    rpc Create(CreateJurnal) returns (Jurnal) {}
    rpc GetByID(JurnalPrimaryKey) returns (Jurnal) {}
    rpc GetList(GetListJurnalRequest) returns (GetListJurnalResponse) {}
    rpc Update(UpdateJurnal) returns (Jurnal) {}
    rpc Delete(JurnalPrimaryKey) returns (JurnalEmpty) {}
}

message JurnalEmpty{}

message JurnalPrimaryKey {
    string id = 1;
}

message CreateJurnal {
    string group_id = 1;
    string from = 2;
}

message Jurnal {
    string id = 1;
    string group_id = 2;
    string from = 3;
    string to =4;
    string created_at = 5;
    string updated_at = 6;
    repeated Schedule Schedules= 8;
    repeated StudentForRep Students = 9;
    
 
}


message UpdateJurnal {
    string id = 1;
    string group_id = 2;
    string from = 3;
    string to =4;
}

message GetListJurnalRequest {
    int64 offset = 1;
    int64 limit = 2;
    string search = 3;
}

message GetListJurnalResponse {
    int64 count = 1;
    repeated Jurnal Jurnals = 2;
}
